--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,6 +16,7 @@
         h1 {
             text-align: center;
             color: #333;
+            font-size: 32px;
         }
     </style>
 </head>
