--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -43,6 +43,16 @@
             padding: 10px;
             margin-bottom: 10px;
         }
+        .example {
+            background-color: #f9f9f9;
+            border: 1px solid #ddd;
+            padding: 10px;
+            border-radius: 4px;
+            margin-bottom: 10px;
+        }
+        .example pre {
+            margin: 0;
+        }
     </style>
 </head>
 <body>
@@ -53,52 +63,193 @@
 
     <div class="endpoint">
         <h3>GET /api/customers</h3>
-        <p>Fetches all customers from the database. Returns a list of customers if found; otherwise, returns a 404 Not Found status.</p>
+        <p>Fetches all customers from the database. Returns a list of customers if found.</p>
+        <div class="example">
+            <h4>Example Request</h4>
+            <pre><code>GET /api/customers</code></pre>
+            <h4>Example Response</h4>
+            <pre><code>[
+  {
+    "id": 1,
+    "name": "John Doe",
+    "email": "john.doe@example.com",
+    "age": 30,
+    "accounts": []
+  },
+  {
+    "id": 2,
+    "name": "Jane Smith",
+    "email": "jane.smith@example.com",
+    "age": 25,
+    "accounts": []
+  }
+]</code></pre>
+        </div>
     </div>
 
     <div class="endpoint">
         <h3>GET /api/customers/customer/{id}</h3>
         <p>Retrieves a specific customer by their ID. Returns the customer if found; otherwise, returns a 404 Not Found status.</p>
+        <div class="example">
+            <h4>Example Request</h4>
+            <pre><code>GET /api/customers/customer/1</code></pre>
+            <h4>Example Response</h4>
+            <pre><code>{
+  "id": 1,
+  "name": "John Doe",
+  "email": "john.doe@example.com",
+  "age": 30,
+  "accounts": []
+}</code></pre>
+        </div>
     </div>
 
     <div class="endpoint">
         <h3>POST /api/customers/create</h3>
         <p>Creates a new customer with the specified <code>name</code>, <code>email</code>, and <code>age</code>. Returns a success message if creation is successful; otherwise, returns a failure message.</p>
+        <div class="example">
+            <h4>Example Request</h4>
+            <pre><code>POST /api/customers/create
+Content-Type: application/json
+
+{
+  "name": "Alice Johnson",
+  "email": "alice.johnson@example.com",
+  "age": 28
+}</code></pre>
+            <h4>Example Response</h4>
+            <pre><code>{
+  "message": "Customer created successfully",
+  "customerId": 3
+}</code></pre>
+        </div>
     </div>
 
     <div class="endpoint">
         <h3>PUT /api/customers/update/{id}</h3>
         <p>Updates an existing customer’s details using the provided <code>CustomerDto</code>. Returns a success message if the update is successful, a message indicating nothing to update if no changes are made, or an error message if the customer is not found.</p>
+        <div class="example">
+            <h4>Example Request</h4>
+            <pre><code>PUT /api/customers/update/1
+Content-Type: application/json
+
+{
+  "name": "John Doe",
+  "email": "john.newemail@example.com",
+  "age": 31
+}</code></pre>
+            <h4>Example Response</h4>
+            <pre><code>{
+  "message": "Customer updated successfully"
+}</code></pre>
+        </div>
     </div>
 
     <div class="endpoint">
         <h3>DELETE /api/customers/delete/{id}</h3>
         <p>Deletes a customer by their ID. Returns a success message if deletion is successful; otherwise, returns a failure message if the customer is not found.</p>
+        <div class="example">
+            <h4>Example Request</h4>
+            <pre><code>DELETE /api/customers/delete/1</code></pre>
+            <h4>Example Response</h4>
+            <pre><code>{
+  "message": "Customer deleted successfully"
+}</code></pre>
+        </div>
     </div>
 
     <div class="endpoint">
         <h3>POST /api/customers/create_account_by_id</h3>
         <p>Creates an account for a customer based on the provided <code>CreateAccountByIdModel</code> which includes the customer ID and currency. Returns a success message if the account is created; otherwise, returns an error message if the customer is not found.</p>
+        <div class="example">
+            <h4>Example Request</h4>
+            <pre><code>POST /api/customers/create_account_by_id
+Content-Type: application/json
+
+{
+  "customerId": 1,
+  "currency": "USD"
+}</code></pre>
+            <h4>Example Response</h4>
+            <pre><code>{
+  "message": "Account created successfully"
+}</code></pre>
+        </div>
     </div>
 
     <div class="endpoint">
         <h3>DELETE /api/customers/delete_account_by_id</h3>
         <p>Deletes a specific account for a customer identified by ID and account number. Returns a success message if the account is deleted; otherwise, returns an error message if the customer or account is not found.</p>
+        <div class="example">
+            <h4>Example Request</h4>
+            <pre><code>DELETE /api/customers/delete_account_by_id
+Content-Type: application/json
+
+{
+  "customerId": 1,
+  "accountNumber": "1234567890"
+}</code></pre>
+            <h4>Example Response</h4>
+            <pre><code>{
+  "message": "Account deleted successfully"
+}</code></pre>
+        </div>
     </div>
 
     <div class="endpoint">
         <h3>DELETE /api/customers/delete_accounts_by_id</h3>
         <p>Deletes all accounts associated with a customer identified by ID. Returns a success message if all accounts are deleted; otherwise, returns an error message if the customer is not found.</p>
+        <div class="example">
+            <h4>Example Request</h4>
+            <pre><code>DELETE /api/customers/delete_accounts_by_id
+Content-Type: application/json
+
+{
+  "customerId": 1
+}</code></pre>
+            <h4>Example Response</h4>
+            <pre><code>{
+  "message": "All accounts deleted successfully"
+}</code></pre>
+        </div>
     </div>
 
     <div class="endpoint">
         <h3>PUT /api/customers/customer/add_employer</h3>
         <p>Associates an employer with a customer using their IDs. Returns a success message if the association is successful; otherwise, returns an error message if the customer or employer is not found.</p>
+        <div class="example">
+            <h4>Example Request</h4>
+            <pre><code>PUT /api/customers/customer/add_employer
+Content-Type: application/json
+
+{
+  "customerId": 1,
+  "employerId": 2
+}</code></pre>
+            <h4>Example Response</h4>
+            <pre><code>{
+  "message": "Employer associated with customer successfully"
+}</code></pre>
+        </div>
     </div>
 
     <div class="endpoint">
         <h3>PUT /api/customers/customer/remove_employer</h3>
         <p>Removes an association between a customer and an employer using their IDs. Returns a success message if the removal is successful; otherwise, returns an error message if the customer or employer is not found.</p>
+        <div class="example">
+            <h4>Example Request</h4>
+            <pre><code>PUT /api/customers/customer/remove_employer
+Content-Type: application/json
+
+{
+  "customerId": 1,
+  "employerId": 2
+}</code></pre>
+            <h4>Example Response</h4>
+            <pre><code>{
+  "message": "Employer removed from customer successfully"
+}</code></pre>
+        </div>
     </div>
 
     <h2>AccountController</h2>
@@ -106,16 +257,59 @@
     <div class="endpoint">
         <h3>POST /api/accounts/add_funds</h3>
         <p>Adds funds to an account identified by the card number. Returns a success message if funds are added successfully; otherwise, returns an error message if the account is not found.</p>
+        <div class="example">
+            <h4>Example Request</h4>
+            <pre><code>POST /api/accounts/add_funds
+Content-Type: application/json
+
+{
+  "cardNumber": "1234567890",
+  "amount": 100
+}</code></pre>
+            <h4>Example Response</h4>
+            <pre><code>{
+  "message": "Funds added successfully"
+}</code></pre>
+        </div>
     </div>
 
     <div class="endpoint">
         <h3>POST /api/accounts/withdraw_funds</h3>
         <p>Withdraws funds from an account identified by the card number. Returns a success message if funds are withdrawn successfully; otherwise, returns an error message if there are insufficient funds or the account is not found.</p>
+        <div class="example">
+            <h4>Example Request</h4>
+            <pre><code>POST /api/accounts/withdraw_funds
+Content-Type: application/json
+
+{
+  "cardNumber": "1234567890",
+  "amount": 50
+}</code></pre>
+            <h4>Example Response</h4>
+            <pre><code>{
+  "message": "Funds withdrawn successfully"
+}</code></pre>
+        </div>
     </div>
 
     <div class="endpoint">
         <h3>POST /api/accounts/send_funds</h3>
         <p>Transfers funds from one account to another. Returns a success message if funds are sent successfully; otherwise, returns an error message if any of the accounts are not found or if there are insufficient funds.</p>
+        <div class="example">
+            <h4>Example Request</h4>
+            <pre><code>POST /api/accounts/send_funds
+Content-Type: application/json
+
+{
+  "fromCardNumber": "1234567890",
+  "toCardNumber": "0987654321",
+  "amount": 200
+}</code></pre>
+            <h4>Example Response</h4>
+            <pre><code>{
+  "message": "Funds sent successfully"
+}</code></pre>
+        </div>
     </div>
 
     <h2>EmployerController</h2>
@@ -123,26 +317,90 @@
     <div class="endpoint">
         <h3>GET /api/employers</h3>
         <p>Fetches all employers from the database. Returns a list of employers if found; otherwise, returns a 404 Not Found status.</p>
+        <div class="example">
+            <h4>Example Request</h4>
+            <pre><code>GET /api/employers</code></pre>
+            <h4>Example Response</h4>
+            <pre><code>[
+  {
+    "id": 1,
+    "name": "Tech Solutions",
+    "address": "123 Tech Street"
+  },
+  {
+    "id": 2,
+    "name": "Biz Corp",
+    "address": "456 Business Road"
+  }
+]</code></pre>
+        </div>
     </div>
 
     <div class="endpoint">
         <h3>GET /api/employers/employer/{id}</h3>
         <p>Retrieves a specific employer by their ID. Returns the employer if found; otherwise, returns a 404 Not Found status.</p>
+        <div class="example">
+            <h4>Example Request</h4>
+            <pre><code>GET /api/employers/employer/1</code></pre>
+            <h4>Example Response</h4>
+            <pre><code>{
+  "id": 1,
+  "name": "Tech Solutions",
+  "address": "123 Tech Street"
+}</code></pre>
+        </div>
     </div>
 
     <div class="endpoint">
         <h3>POST /api/employers/create</h3>
         <p>Creates a new employer with the specified <code>name</code> and <code>address</code>. Returns a success message if creation is successful; otherwise, returns a failure message.</p>
+        <div class="example">
+            <h4>Example Request</h4>
+            <pre><code>POST /api/employers/create
+Content-Type: application/json
+
+{
+  "name": "New Employer Inc.",
+  "address": "789 New Avenue"
+}</code></pre>
+            <h4>Example Response</h4>
+            <pre><code>{
+  "message": "Employer created successfully",
+  "employerId": 3
+}</code></pre>
+        </div>
     </div>
 
     <div class="endpoint">
         <h3>PUT /api/employers/update/{id}</h3>
         <p>Updates an existing employer’s details using the provided <code>EmployerDto</code>. Returns a success message if the update is successful, a message indicating nothing to update if no changes are made, or an error message if the employer is not found.</p>
+        <div class="example">
+            <h4>Example Request</h4>
+            <pre><code>PUT /api/employers/update/1
+Content-Type: application/json
+
+{
+  "name": "Tech Solutions",
+  "address": "1234 Tech Park"
+}</code></pre>
+            <h4>Example Response</h4>
+            <pre><code>{
+  "message": "Employer updated successfully"
+}</code></pre>
+        </div>
     </div>
 
     <div class="endpoint">
         <h3>DELETE /api/employers/delete/{id}</h3>
         <p>Deletes an employer by their ID. Returns a success message if deletion is successful; otherwise, returns a failure message if the employer is not found.</p>
+        <div class="example">
+            <h4>Example Request</h4>
+            <pre><code>DELETE /api/employers/delete/1</code></pre>
+            <h4>Example Response</h4>
+            <pre><code>{
+  "message": "Employer deleted successfully"
+}</code></pre>
+        </div>
     </div>
 
 </div>
