--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -89,7 +89,7 @@
 
     <div class="endpoint">
         <h3>GET /api/customers/customer/{id}</h3>
-        <p>Retrieves a specific customer by their ID. Returns the customer if found; otherwise, returns a 404 Not Found status.</p>
+        <p>Retrieves a specific customer by their ID. Returns the customer if found.</p>
         <div class="example">
             <h4>Example Request</h4>
             <pre><code>GET /api/customers/customer/1</code></pre>
@@ -106,7 +106,7 @@
 
     <div class="endpoint">
         <h3>POST /api/customers/create</h3>
-        <p>Creates a new customer with the specified <code>name</code>, <code>email</code>, and <code>age</code>. Returns a success message if creation is successful; otherwise, returns a failure message.</p>
+        <p>Creates a new customer with the specified <code>name</code>, <code>email</code>, and <code>age</code>. Returns a success message if creation is successful.</p>
         <div class="example">
             <h4>Example Request</h4>
             <pre><code>POST /api/customers/create
