--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -59,7 +59,7 @@
 <div class="container">
     <h1>API Methods Description</h1>
 
-    <h2>CustomerController</h2>
+    <h2>Customer</h2>
 
     <div class="endpoint">
         <h3>GET /api/customers</h3>
@@ -252,7 +252,7 @@ Content-Type: application/json
         </div>
     </div>
 
-    <h2>AccountController</h2>
+    <h2>Account</h2>
 
     <div class="endpoint">
         <h3>POST /api/accounts/add_funds</h3>
@@ -312,7 +312,7 @@ Content-Type: application/json
         </div>
     </div>
 
-    <h2>EmployerController</h2>
+    <h2>Employer</h2>
 
     <div class="endpoint">
         <h3>GET /api/employers</h3>
