--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -74,14 +74,16 @@
     "name": "John Doe",
     "email": "john.doe@example.com",
     "age": 30,
-    "accounts": []
+    "accounts": [],
+    "employers": []
   },
   {
     "id": 2,
     "name": "Jane Smith",
     "email": "jane.smith@example.com",
     "age": 25,
-    "accounts": []
+    "accounts": [],
+    "employers": []
   }
 ]</code></pre>
         </div>
@@ -99,7 +101,8 @@
   "name": "John Doe",
   "email": "john.doe@example.com",
   "age": 30,
-  "accounts": []
+  "accounts": [],
+    "employers": []
 }</code></pre>
         </div>
     </div>
