--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -101,7 +101,7 @@
     "name": "John Doe",
     "email": "john.doe@example.com",
     "age": 30,
-    "phone": "string",
+    "phone": "+380505555555",
     "createdDate": "ISO8601 date-time",
     "lastModifiedDate": "ISO8601 date-time"
 
@@ -111,7 +111,7 @@
     "name": "Jane Smith",
     "email": "jane.smith@example.com",
     "age": 25,
-    "phone": "string",
+    "phone": "+380503333333",
     "createdDate": "ISO8601 date-time",
     "lastModifiedDate": "ISO8601 date-time"
   }
@@ -218,9 +218,9 @@ Content-Type: application/json
             <h4>Example Response</h4>
             <pre><code>{
     "id": "1",
-    "accountNumber": "string",
-    "balance": "number",
-    "currency": "string",
+    "accountNumber": "02e56625-bcee-4a0e-8c90-7eddf4a31613",
+    "balance": 100,
+    "currency": "USD",
     "createdDate": "ISO8601 date-time",
     "lastModifiedDate": "ISO8601 date-time"
 }</code></pre>
@@ -238,7 +238,7 @@ Content-Type: application/json
 
 {
   "customerId": 1,
-  "accountNumber": "1234567890"
+  "accountNumber": "02e56625-bcee-4a0e-8c90-7eddf4a31613"
 }</code></pre>
             <h4>Example Response</h4>
             <pre><code>{
