--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -164,7 +164,9 @@ Content-Type: application/json
 {
   "name": "Alice Johnson",
   "email": "alice.johnson@example.com",
-  "age": 28
+  "age": 28,
+  "phone": "+380505555555",
+  "password": "qWerty!",
 }</code></pre>
             <h4>Example Response</h4>
             <pre><code>{
@@ -193,7 +195,9 @@ Content-Type: application/json
 {
   "name": "John Doe",
   "email": "john.newemail@example.com",
-  "age": 31
+  "age": 31,
+  "phone": "+380505555555",
+  "password": "qWerty!",
 }</code></pre>
             <h4>Example Response</h4>
             <pre><code>{
