--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -154,7 +154,7 @@
 
     <div class="endpoint">
         <h3>POST /api/customers/create</h3>
-        <p>Creates a new customer with the specified <code>name</code>, <code>email</code>, and <code>age</code>.
+        <p>Creates a new customer with using the provided <code>CustomerDto</code>.
             Returns a success message if creation is successful.</p>
         <div class="example">
             <h4>Example Request</h4>
