--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -155,7 +155,7 @@
     <div class="endpoint">
         <h3>POST /api/customers/create</h3>
         <p>Creates a new customer with using the provided <code>CustomerDto</code>.
-            Returns a success message if creation is successful.</p>
+            Retrieves a specific customer</p>
         <div class="example">
             <h4>Example Request</h4>
             <pre><code>POST /api/customers/create
