--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -437,8 +437,8 @@ Content-Type: application/json
 
     <div class="endpoint">
         <h3>POST /api/employers/create</h3>
-        <p>Creates a new employer with the specified <code>name</code> and <code>address</code>. Returns a success
-            message if creation is successful; otherwise, returns a failure message.</p>
+        <p>Creates a new employer with using the provided <code>EmployerDto</code>.
+            Retrieves a specific employer</p>
         <div class="example">
             <h4>Example Request</h4>
             <pre><code>POST /api/employers/create
