--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -154,8 +154,8 @@
 
     <div class="endpoint">
         <h3>POST /api/customers/create</h3>
-        <p>Creates a new customer with using the provided <code>CustomerDto</code>.
-            Retrieves a specific customer</p>
+        <p>Creates a new customer using the provided <code>CustomerDto</code>. The response will not include the
+            password field.</p>
         <div class="example">
             <h4>Example Request</h4>
             <pre><code>POST /api/customers/create
