--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
 
 <body>
 <div class="container">
-    <h1>api/v1 Methods Description</h1>
+    <h1>api Methods Description</h1>
 
     <h2>Customer</h2>
 
